--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,14 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(209, 43, 43, 0.87);
   
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #213547;
-  background-color: #ffffff;
+  background-color: #add12c;
 
 }
 
