--- a/src/index.css
+++ b/src/index.css
@@ -4,15 +4,13 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(209, 43, 43, 0.87);
-  
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: #213547;
-  background-color: #add12c;
-
 }
 
 a {
@@ -24,20 +22,10 @@ a:hover {
   color: #535bf2;
 }
 
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-img {
-  display: block;
-}
-
 body {
   margin: 0;
   display: flex;
-  
+  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -47,23 +35,16 @@ h1 {
   line-height: 1.1;
 }
 
-p {
-  margin: 0;
-}
-
-span {
-  display: block;
-}
-
 button {
   border-radius: 8px;
-  /* border: 1px solid transparent; */
+  border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
+  background-color: #1a1a1a;
   cursor: pointer;
-  /* transition: border-color 0.25s; */
+  transition: border-color 0.25s;
 }
 button:hover {
   border-color: #646cff;
@@ -73,7 +54,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-/* @media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -84,4 +65,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-} */
+}
