--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,6 +1,25 @@
-.name {
+
+.container {
+    border: 1px solid black;
+    padding: 15px;
+    width: 220px;
+    border-radius: 10px;
+    margin-bottom: 15px;
 }
 
 .username {
-    
+    /* margin-right: 20px; */
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.number {
+    /* margin-right: 20px; */
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.btn {
+    display: block;
+    margin: auto;
 }
